fixed issue where projects would not display on mobile device

--- a/src/containers/projects/Projects.css
+++ b/src/containers/projects/Projects.css
@@ -62,6 +62,9 @@
 }
 
 @media (max-width: 768px) {
+  .startup-project-text {
+    display: grid;
+  }
   .starup-project-image {
     display: none;
   }
